fix: change colors of buttons to improve contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,11 +56,11 @@ button:hover {
 }
 
 button.btn.symbols {
-  background-color: #f0a33b;
+  background-color: #330033;
 }
 
 button.btn.grey {
-  background-color: #a5a5a5;
+  background-color: #000033;
 }
 
 button.btn.dark-grey {
@@ -68,11 +68,11 @@ button.btn.dark-grey {
 }
 
 button.btn.red {
-  background-color: #ff0000;
+  background-color: #330000;
 }
 
 button.btn.green {
-  background-color: #007500;
+  background-color: #003300;
 }
 
 button.btn.expand {
@@ -99,7 +99,7 @@ button.btn.expand {
     position: absolute;
     top: 615px;
     margin-left: 76px;
-    background-color: rgb(0, 102, 255);
+    background-color: #333300;
   }
 
   .visible {
